<resources>
    <!-- App name -->
    <string name="app_name">CarDemo</string>
    <string name="exit_app">Please click back again to exit.</string>

    <!-- Google -->
    <string name="google_map_apis_key">AIzaSyB96KqUoHaNlpAvG2tY0wOqKMiKfHrJxyY</string>

    <!-- Language -->
    <string-array name="languages">
        <item>ไทย</item>
        <item>English</item>
    </string-array>

    <!-- Bottom Navigate -->
    <string name="shop">Shop</string>
    <string name="setting">Setting</string>

    <!-- Setting Page -->
    <string name="your_fav_shop">My favourite shop</string>
    <string name="add_my_shop">Add shop</string>
    <string name="language">Language</string>
    <string name="search_filter">Search filter</string>
    <string name="filter">Filter</string>

    <!-- Add shop Page -->
    <string name="name_shop">Name shop</string>
    <string name="type_shop">Type shop</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="categoty_shop">Category shop</string>
    <string name="address">Address</string>
    <string name="add_shop">Add shop</string>
    <string name="fill_in_data">Fill in data</string>
    <string name="address_detail">Please pick your shop location on map</string>


    <!-- Search -->
    <string name="search_shop">Search shop</string>


    <!-- Filter -->
    <string name="range">Range</string>
    <string name="km">Km.</string>

</resources>
