<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            style="@style/TitileNameShopCard"
            android:text="@string/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/range"
            style="@style/TitileSmall"
            android:text="@string/range"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <SeekBar
            android:id="@+id/seekBarRange"
            android:layout_margin="8dp"
            android:max="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            style="@style/TitileSmall"
            android:text="@string/categoty_shop"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>