<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ShopDetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

        <TextView
                style="@style/TitileNameShopCard"
                android:layout_margin="8dp"
                android:id="@+id/nameShop"
                tools:text="Title name shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                style="@style/DescriptionShopCard"
                android:layout_margin="8dp"
                android:id="@+id/description"
                android:lines="2"
                android:maxLines="3"
                tools:text="description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                style="@style/TitileSmall"
                android:layout_margin="8dp"
                tools:text="Type"
                android:text="@string/type_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/DescriptionShopCard"
                android:layout_margin="8dp"
                tools:text="Car, Motor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/TitileSmall"
                android:layout_margin="8dp"
                tools:text="Categories"
                android:text="@string/categoty_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecyclerView"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
                style="@style/TitileSmall"
                android:layout_margin="8dp"
                tools:text="Address"
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">
            <fragment
                    android:id="@+id/mapFragment"
                    android:name="com.example.hokkung.cardemo.utils.TouchMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/images"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/mapFragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
</ScrollView>
